Update 00欢迎页.md, 10申请签证.md, 16 云找房.md, 24找房租房.md, 25住址申报（“户口”）.md, 28居留证的办理.md, 30学联服务.md, 34居留证的续期.md, 35“户口”相关.md, 36人身财产安全.md, 37其他相关事项.md, SUMMARY.md, 防诈反诈.md Delete 25住址的申报与注销.md, 35人身财产安全.md, 36其他相关事项.md

--- a/10申请签证.md
+++ b/10申请签证.md
@@ -4,7 +4,7 @@
 
 * [欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)公民
 * 澳大利亚/文莱/日本/马来西亚/新加坡/新西兰/英国公民
-* 持有任一申根国家签发的有效申根居留或申根D类签证的**非[欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)公民**
+* 持有任一申根国家签发的有效申根居留或申根D类签证的非[欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)公民
 
 换言之，**大多数赴瑞求学的中国留学生在首次赴瑞留学前需要提前办理申根D类签证，并凭此入境瑞士**。对于少数符合上述“不需要办理签证”条件的留学生，请参考[Immigration to Switzerland - Immigration without a visa](https://ethz.ch/en/studies/international/after-admission/immigration/without-visa.html)的指导。
 此外，**如先前因在瑞士就读中学而持有瑞士居留证，而其在中学毕业后大学开学前到期的，可选择向苏黎世州移民局申请办理“境内迁移”（Kantonswechsel）**，具体流程请根据自身实际情况咨询苏黎世州移民局；亦可在居留证到期前回国按正常流程办理签证后再行赴瑞。**对于诸如此类的“冷门”情况，我们始终建议主动咨询移民局，阐明自身实际情况并根据其建议/要求办理相关手续**。
@@ -17,8 +17,8 @@
 
 #### **2. 申请签证的时间**
 
-对于本科与硕士学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
-对于博士学生，因需要的签证类型为工作签，必须由学校代为申请（实际操作上一般由组内秘书代为申请）。
+- 对于**本科与硕士**学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
+- 对于博士学生，因需要的签证类型为工作签，必须由学校代为申请（实际操作上一般由组内秘书代为申请）。
 
 ^
 
@@ -63,7 +63,7 @@
 * 动机信（motivation letter，简短）
 * 学习计划（study plan，简短）
 * 毕业计划（future plan，简短）
-* ~~毕业离境承诺书~~（高等院校（Hochschule）学生**不需要提交**书面的毕业离境承诺书！）
+* ~~毕业离境承诺书~~【高等院校（Hochschule）学生**不需要提交**书面的毕业离境承诺书！】
 
 > 根据苏黎世州移民局《Weisung: Aus- und Weiterbildung aus Drittstaaten》 的2.4.3.2. Wiederausreiseverpflichtung 条款，来苏黎世州接受高等教育（Hochschule）的非申根区人员**不需要提交书面的毕业离境承诺书**，因为其毕业后有可能会留在瑞士工作。
 >
