--- a/30学联服务.md
+++ b/30学联服务.md
@@ -1,57 +1,45 @@
-#### **1. 学联网站&学联论坛**
+#### **1. 学联官方渠道**
 
-<https://www.acssz.org/>
-
-<https://forum.acssz.org/>
+- 学联官网：<https://www.acssz.org/>
+- 学联论坛：<https://forum.acssz.org/>
+- 学联微信公众号：
+![](.topwrite/assets/image_1682199759896.png =160)
+- 学联小红书：
+![](.topwrite/assets/image_1682199946890.png =159)
 
 ^
 
-#### **2. 2023苏黎世新生二群**
+#### **2. 新生微信群聊**
 
 ![](.topwrite/assets/image_1683482351317.png =238)
 
 ^
 
-#### **3. 2023年新生文档**&#x20;
+#### **3. 学联《苏黎世留学指南》（本文）**&#x20;
 
 <https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>
 
 ^
-
-#### **4. 学联公众号**
-
-![](.topwrite/assets/image_1682199759896.png =160)
-
-^
-
-#### **5. 学联小红书**
-
-![](.topwrite/assets/image_1682199946890.png =159)
+#### **4. 学联专属SIM卡折扣：Sunrise LEBARA**
+![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
+![](.topwrite/assets/image_1682192038118.png =245)
+**业务介绍：**<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
 
 ^
-
-#### **6. 学联专属Sunrise LEBARA手机卡折扣**
-
-![](.topwrite/assets/image_1682192038118.png =245)![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
-
-<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
-
-^
-
-#### **7. 学联专属Swisscare保险折扣**
-
+#### **5. 学联专属保险折扣：Swisscare**
 ![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
-
-<https://forms.swisscare.com/#/spss?group=3018>
-
-<https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
-
+**业务介绍：**<https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
+**学联专属办理链接**：<https://forms.swisscare.com/#/spss?group=3018>
 ^
 
-#### **8. 学联伙伴intermezzo租房**
-
-<https://forum.acssz.org/d/386>
-
+#### **6. 学联租房合作伙伴：Intermezzo**
 ![](.topwrite/assets/image_1682200100537.png =258)
-
+**业务介绍：**<https://forum.acssz.org/d/386>
 ^
+
+#### **7. 电子学联卡**
+微信搜索小程序”ACSSZ“，上传相关材料即可办理。
+材料审核通过后在学联合作商家处凭该卡消费可享9折优惠。
+^
+
+#### ***AND - MANY MORE TO BE DISCOVERED!***
