--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -39,6 +39,7 @@
 - 诈骗方式：“收钱不出票”/“出具虚假客票”
 - 诈骗团伙：非法票代团伙
 - 套路：
+- 避免：
 
 #### **1.5 街头求助搭讪类**
 - 诈骗方式：线下诈骗
@@ -51,8 +52,6 @@
 - 套路：
 
 #### **1.7 租房相关诈骗**
-- 诈骗方式：邮件诈骗
-- 诈骗团伙：欧洲当地的诈骗团伙
-- 套路：
+*请参考[16 云找房](<16 云找房.md>)及[24 找房租房](<24找房租房.md>)章节。*
 
 ### **2. 遭遇诈骗后的处理**
