Update 02落地事项.md, 24找房租房.md, 28居留证的办理.md, 34居留证的续期.md

--- a/24找房租房.md
+++ b/24找房租房.md
@@ -118,7 +118,7 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 ### **5. “注册”地址相关**
 
-总的来说，“注册地址”一词是很久以前坊间以讹传讹冒出来的词汇，其**不对应任何官方条文概念**。官方要求请见“[25 住址的申报与注销](25住址的申报与注销.md)”篇。
+总的来说，“注册地址”一词是很久以前坊间以讹传讹冒出来的词汇，其**不对应任何官方条文概念**。官方要求请见“[25 住址申报（“户口”）](25住址申报（“户口”）.md)”篇。
 
 ^
 
