--- a/34居留证的续期.md
+++ b/34居留证的续期.md
@@ -2,11 +2,12 @@
 
 一般地，在瑞留学生获得的居留证**有效期为1年**，临期时需要办理延期以确保能够继续在瑞士居留。根据相关法律法规，办理延期的时间应**不早于居留证到期前三个月，并不晚于居留证到期前两周**。如因故有特殊需求希望提前/延后办理的，请咨询人口登记办公室的工作人员。
 居留证到期前一个月左右，政府有关部门会向你寄送一封“延期信函”（Verfallsanzeige Ausweis B，此处的B对应居留证类型；一般是一张可填写/需要填写的表格），要求你办理延期。
-如你希望提前办理，亦可前往人口登记办公室要求工作人员**现场签发“延期信函”**，唯须注意前文所述的办理时间限制。
+如你希望提前办理，亦可前往人口登记办公室要求工作人员**现场签发“延期信函**”，唯须注意前文所述的办理时间限制。
 
 ^
 
 #### **2.  居留证续期所需材料**
+
 > [warning] *本章节内容需要额外核实*
 
 * 填妥的“延期信函”（可请工作人员现场指导填写）
@@ -20,9 +21,10 @@
 ^
 
 #### **3.  额外材料的递交/补交**
+
 > [warning] *本章节关于“博士的存款证明”内容需要额外核实*
 
-在人口登记处办理居留证续期后，移民局可能会向办理人致信，要求其**额外提供材料**供移民局审核。例如，对于本科和硕士学生，移民局几乎一定会要求补交一份最近开具的**存款证明**（或不适用于博士），表明其银行账户内余额在办理延期时**不低于21000.00瑞郎（即：不允许使用先前办理签证时使用的存款证明来办理延期！）** 
+在人口登记处办理居留证续期后，移民局可能会向办理人致信，要求其**额外提供材料**供移民局审核。例如，对于本科和硕士学生，移民局几乎一定会要求补交一份最近开具的**存款证明**（或不适用于博士），表明其银行账户内余额在办理延期时**不低于21000.00瑞郎（即：不允许使用先前办理签证时使用的存款证明来办理延期**！）
 在收到此类信件后，须按照信中要求，在规定时间前递交相应材料。如在规定时间前因故无法提供全部或部分材料的，也**必须**向移民局回信说明，并注明预期的上交时间。递交和回信方式参见本文第六节“联系移民局/补交材料”部分。
 
 ^
@@ -57,10 +59,15 @@
 ^
 
 **移民局咨询电话**: +41 43 259 88 00（瑞士时间星期一到星期五 08:00-12:00、13:00-16:30可用）
-*拨打该电话，有很大概率会提示“所有雇员正忙，请稍后”，此时可耐心等待；如等待较长时间仍未接听的，可尝试挂断并再次拨打，并在再次拨打时切换服务语言（例如先前选择英语，第二次则可选择德语；无需担心语言不通问题，德语和英语岗位上的客服人员都熟练掌握这两种语言）。如仍然无效的，建议等到其下次开始上班时间再次拨打。*
+*拨打该电话，有很大概率会提示“所有雇员正忙，请稍后”，此时可耐心等待；如等待较长时间仍未接听的，可尝试挂断并再次拨打，并在再次拨打时切换服务语言（例如先前选择英语，第二次则可选择德语；无需担心语言不通问题，德语和英语岗位上的客服人员都熟练掌握这两种语言）。如仍然无效的，建议等到其下次开始上班时间再次拨打*。
+
 ^
+
 #### **7. 参考链接**
-- [Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html)
-- [Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)
-- [ETH: Visa and Residence Permit](https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf)
-- [ch.ch - Schweizerische Aufenthaltsbewilligungen](<https://www.ch.ch/de/ausweise-und-dokumente/aufenthaltsbewilligungen/#>)
+
+* [Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html)
+* [Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)
+* [ETH: Visa and Residence Permit](https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf)
+* [ch.ch - Schweizerische Aufenthaltsbewilligungen](https://www.ch.ch/de/ausweise-und-dokumente/aufenthaltsbewilligungen/#)
+
+^
