Update .topwrite/assets/09e0c3410962efe08b3f7d74fa849f4.jpg, .topwrite/assets/1689462909359.png, .topwrite/assets/6a8abde71afc1cdb89c24a4e9e74077.jpg, .topwrite/assets/Verfallsanzeige B.pdf, 13赴瑞机票.md, 16 云找房.md, 34居留证的延期.md, SUMMARY.md, 报警/报案相关.md, 防诈反诈.md Delete 34居留证的续期.md, 紧急电话.md

--- a/34居留证的延期.md
+++ b/34居留证的延期.md
@@ -1,14 +1,15 @@
+> [success] 本章作者：陈雨航、赵逸飞
+
+> [success] 特别鸣谢：于之赫
 #### **1.  何时需要办理居留证延期**
 
 一般地，在瑞留学生获得的居留证**有效期为1年**，临期时需要办理延期以确保能够继续在瑞士居留。根据相关法律法规，办理延期的时间应**不早于居留证到期前三个月，并不晚于居留证到期前两周**。如因故有特殊需求希望提前/延后办理的，请咨询人口登记办公室的工作人员。
-居留证到期前一个月左右，政府有关部门会向你寄送一封“延期信函”（Verfallsanzeige Ausweis B，此处的B对应居留证类型；一般是一张可填写/需要填写的表格），要求你办理延期。
+居留证到期前两个月左右，政府有关部门会向你寄送一封“延期信函”（Verfallsanzeige Ausweis B，此处的B对应居留证类型，范例见:attachment[Verfallsanzeige B.pdf]{src=".topwrite/assets/Verfallsanzeige B.pdf" size="1.71 MB"}；一般是一张可填写/需要填写的表格），要求你办理延期。
 如你希望提前办理，亦可前往人口登记办公室要求工作人员**现场签发“延期信函**”，唯须注意前文所述的办理时间限制。
 
 ^
 
-#### **2.  居留证续期所需材料**
-
-> [warning] *本章节内容需要额外核实*
+#### **2.  办理延期所需材料**
 
 * 填妥的“延期信函”（可请工作人员现场指导填写）
 * 护照
@@ -24,7 +25,7 @@
 
 > [warning] *本章节关于“博士的存款证明”内容需要额外核实*
 
-在人口登记处办理居留证续期后，移民局可能会向办理人致信，要求其**额外提供材料**供移民局审核。例如，对于本科和硕士学生，移民局几乎一定会要求补交一份最近开具的**存款证明**（或不适用于博士），表明其银行账户内余额在办理延期时**不低于21000.00瑞郎（即：不允许使用先前办理签证时使用的存款证明来办理延期**！）
+在人口登记处办理居留证延期后，移民局可能会向办理人致信，要求其**额外提供材料**供移民局审核。例如，对于本科和硕士学生，移民局几乎一定会要求补交一份最近开具的**存款证明**（或不适用于博士），表明其银行账户内余额在办理延期时**不低于21000.00瑞郎（即：不允许使用先前办理签证时使用的存款证明来办理延期**！）
 在收到此类信件后，须按照信中要求，在规定时间前递交相应材料。如在规定时间前因故无法提供全部或部分材料的，也**必须**向移民局回信说明，并注明预期的上交时间。递交和回信方式参见本文第六节“联系移民局/补交材料”部分。
 
 ^
@@ -37,7 +38,7 @@
 
 #### **5.  居留证“空档期”的出境**
 
-在原有居留证过期以后，获得新的居留证以前，因故需要离开瑞士的（含回国等），或居留证在离开瑞士后返回瑞士前到期的，须前往移民局**办理返程签证（Return Visa**）**以确保可以回到瑞士。该签证为随到随办，无需预约**。建议在办理返程签证前致电移民局以确保符合办理条件。
+在原有居留证过期以后，获得新的居留证以前，因故需要离开瑞士的（含回国等），或居留证在离开瑞士后返回瑞士前到期的，须前往移民局**办理返程签证（Return Visa）以确保可以回到瑞士**。该签证为**随到随办，无需预约**。建议在办理返程签证前致电移民局以确保符合办理条件。
 
 ^
 
