--- a/16 云找房.md
+++ b/16 云找房.md
@@ -1,4 +1,6 @@
-> [success] 本篇贡献：任逍遥、杨晨宇、杨锦涛和张家萌、陈庆瑄、彭雅莹、岳妮
+> [success] 本章作者：任逍遥、杨晨宇、杨锦涛和张家萌、陈庆瑄、彭雅莹、岳妮
+
+> [success] 特别鸣谢：张家萌、陈庆瑄、彭雅莹、岳妮
 
 在找房之前，请查看租房避雷贴：[租房避雷贴- 苏黎世留学生论坛](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)
 
@@ -45,11 +47,6 @@ ETH\&UZH联办租房平台的回复速度和申请成功率较高，具体如何
 6. 每个人有且只有一次向Housing Office申请宿舍的机会（属于是开盲盒）。Housing Office会随机分发有空的房子，有可能不是你希望申请的那一套。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
 7. 秋季入学的新生，建议4、5月即可开始找房，7、8、9月苏黎世逐渐进入找房高峰。如在来前能找到心仪长租房，皆大欢喜。否则建议退而求其次采用备选方案，暂且放弃价格，舒适度，地段，便利程度等某个要求，先找个房住下注册好，至少有个落脚点，之后在漫漫求学过程中再换房。如果一直观望，则可能导致最后扑空，因而不得不连续住几个月酒店，其性价比往往更低。本条建议仅供参考。
 
-**致谢**：
-
-谢谢家萌（新生）、庆瑄（新生）、雅莹（新生）、岳妮（新生）提供以上关于在[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)找房的极具价值和帮助作用的信息！
-
-前人栽树，后人乘凉。如你有重要信息想补充进《新生文档》，请联系邮箱info\@acssz.org，谢谢你的热心帮助！
 
 ^
 
