--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -1,11 +1,9 @@
 > [success] 本章作者：赵逸飞
 
->  [warning] *本章编写尚未完成*
-
 > [info] *如你在瑞士经历过诈骗的，欢迎将相关经历通过info@acssz.org分享给我们，或在[学联论坛换汇预警帖](<https://forum.acssz.org/d/72-ti-xing-si-xia-huan-hui-da-e-jiao-yi-xu-jin-shen>)中分享，以帮助更多同学识破诈骗分子的阴谋。*
-^
+
 ### **1. 在瑞常见诈骗手段的介绍、识别与预防**
-^
+
 #### **1.1 私下换汇相关诈骗**
 > [danger] ***【学联提醒】无论是在中国还是在瑞士，私下换汇行为都可能涉嫌违法；如有犯罪分子利用私下换汇行为进行洗钱活动的，换汇人还可能涉嫌犯罪，需要追究刑事责任（参考：[《留学生私下换汇被判刑 哪些行为涉嫌“洗钱”？》](<https://lx.huanqiu.com/article/9CaKrnK9SJX>)）；请自行斟酌有关风险！！！***
 - **诈骗方式：** 线下诈骗，”物理“跑路
@@ -23,7 +21,7 @@
 5). 选择换汇地点时，尽量选择人流量大/有监控探头的地方
 6). 在任何情况下，不要向陌生人透露自己的住址，也不要向陌生人透露自己的银行账户信息
 7). 如遭遇诈骗/抢劫，请第一时间报警
-^
+
 #### **1.2 “天上掉黑锅”类 / “无辜失联”类**
 > [danger] ***【学联提醒】 在任何情况下，驻瑞士使领馆和快递公司都不会介入办案，也不会电话通知涉案，更不会提供向公安部门转接电话的”服务“。同时，国内长期以来大力宣传的”96110电话一定要接“在国外并不适用。***
 - **诈骗方式：** 电话诈骗
@@ -66,10 +64,8 @@
 9). 凡国内科级、处级、局（厅）级单位使用国徽印章的，都是诈骗
 10). 凡“公检法”人员口音与其所在地不符的（如北京警察操闽南口音），或使用一些仅在台湾地区流行的说法的，都是诈骗（前者需综合判断）
 
-^
 #### **1.3 机票相关诈骗**
 > [danger] ***【学联提醒】在任何情况下，航司官网和正规OTA平台都比私人票代可靠。此外，奖励客票（俗称”里程票“）不允许通过航司官方以外渠道买卖。***
-
 - **诈骗方式：** “收钱不出票”/“出具虚假客票”/违规出售里程票
 - **诈骗团伙：** 私人票代
 - **案例汇总：**
@@ -81,7 +77,7 @@
 2). 如因特殊情况确需从私人票代处购票的，应确保该票代可靠
 3). 在任何情况下，奖励客票（”里程票“）均不允许通过航司官方以外的渠道进行买卖。
 4). 在购票后，前往航司官网通过输入电子客票号（一般为13位数字编码，[其中前三位代表出票航空公司](<https://www.iata.org/en/about/members/airline-list/>)）或预定编码（一般为6位字母数字混合编码）查验客票真实性。（如客票通过中航信系统填开的，航旅纵横应用能够自动导入，亦可辅助验证。）
-^
+
 #### **1.4 街头求助搭讪类**
 > [danger] ***【学联提醒】在任何情况下都不要上陌生人的车！！！***
 - **诈骗方式：** 线下诈骗
@@ -92,12 +88,12 @@
 - **风险预防：**
 1). **在任何情况下都不要上陌生人的车**
 2). 如有陌生人以”我老婆也是中国人“”我曾经在上海待过一段时间“或类似理由搭讪，立即提高警惕并做好离开准备
-^
+
 #### **1.5 租房相关诈骗**
 *请参考[16 云找房](<16 云找房.md>)及[24 找房租房](<24找房租房.md>)章节。*
+
+^
 ^
 ### **2. 遭遇诈骗后的处理**
-> [warning] *本章节可能需要添加关于电话报案和警局报案的流程信息。*
-
-如不幸遭遇诈骗，请及时向案件所在地的警局报案，并按照警员指导提供相关信息。
+如不幸遭遇诈骗，请及时向案件所在地的警局报案，并按照警员指导提供相关信息。报案注意事项请参考[报警/报案相关](<报警/报案相关.md>)章节。
 此外，如诈骗行为在平台发生的，亦应向平台进行举报。
