Update 25住址申报（“户口”）.md, 28居留证的办理.md, 防诈反诈.md

--- a/25住址申报（“户口”）.md
+++ b/25住址申报（“户口”）.md
@@ -1,7 +1,5 @@
 > [success] 本篇贡献：田竹仝，陈雨航，赵逸飞，杨锦涛，范梦瑶
 
-> [warning] 本篇涉及大量新适用的政策，仅供参考。
-
 > [danger] 导向本章节的超链接可能失效，需要额外核实。
 
 #### **1. 苏黎世州的住址申报体系介绍**
@@ -31,7 +29,7 @@
 
 ^
 
-> [warning] **背景介绍**
+> [info] **背景介绍**
 > *为确保本文内容与其他较早发布的相关消息来源的衔接，保留该模块。*
 > 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记办公室（详见：[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
 >
