--- a/28居留证的办理.md
+++ b/28居留证的办理.md
@@ -1,4 +1,4 @@
-> [info] *本章节仅介绍新迁入人员首次办理居留证的流程，关于居留证的临期换发请参考*[34 居留证的续期](34居留证的续期.md)。
+> [info] *本章节仅介绍新迁入人员首次办理居留证的流程，关于居留证的临期换发请参考[34 居留证的延期](<34居留证的延期.md>)。*
 
 #### **1. 前往移民局办理居留证**
 
