--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -1,6 +1,8 @@
 > [success] 本章作者：赵逸飞
 
-> [info] *如你在瑞士经历过诈骗的，欢迎将相关经历通过info@acssz.org分享给我们，或在[学联论坛换汇预警帖](<https://forum.acssz.org/d/72-ti-xing-si-xia-huan-hui-da-e-jiao-yi-xu-jin-shen>)中分享，以帮助更多同学识破诈骗分子的阴谋。*
+> [success] 特别鸣谢：中国驻苏黎世总领馆
+
+> [info] *如你在瑞士经历过诈骗的，欢迎将相关经历通过info@acssz.org分享给我们，或在[学联论坛](<https://forum.acssz.org/>)中分享，以帮助更多同学识破诈骗分子的阴谋。*
 
 ### **1. 在瑞常见诈骗手段的介绍、识别与预防**
 
