--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,3 +1,7 @@
+> [warning] 本章节后期考虑简要添加以下内容，部分信息将请新生提供：
+> - 签证更改（如姓名写错，希望更改最早准许入境日期等） 的可能性及对接方
+> - 签证效力知识普及（以短句+外链形式）
+> - 《授权信》相关
 #### **1. 需要申请签证的人员**
 
 根据瑞士相关法律法规，以下人员赴瑞留学**不需要**办理签证：
