--- a/34居留证的延期.md
+++ b/34居留证的延期.md
@@ -10,14 +10,14 @@
 ^
 
 #### **2.  办理延期所需材料**
-
+> [info] ***办理居留证延期不需要前往移民局，也不需要重新拍照或进行指纹录入！***
 * 填妥的“延期信函”（可请工作人员现场指导填写）
 * 护照
 * 现有居留证
 * 最新的学期注册证明
 * 办理费用：102.00瑞郎（接受现金/刷卡）
 
-居住地在苏黎世市区的，无需预约，可直接携带齐全材料前往市区任一人口登记办公室办理（地址信息详见[25 住址的申报与注销](25住址的申报与注销.md)）；居住地在苏黎世郊区的，请参考所在地的人口登记办公室。
+居住地在苏黎世市区的，无需预约，可直接携带齐全材料前往市区任一人口登记办公室办理（地址信息详见[25 住址申报（“户口”）](<25住址申报（“户口”）.md>)）；居住地在苏黎世郊区的，请参考所在地的人口登记办公室。
 
 ^
 
@@ -66,7 +66,7 @@
 
 #### **7. 参考链接**
 
-* [Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html)
+* [Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html) [链接失效]
 * [Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)
 * [ETH: Visa and Residence Permit](https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf)
 * [ch.ch - Schweizerische Aufenthaltsbewilligungen](https://www.ch.ch/de/ausweise-und-dokumente/aufenthaltsbewilligungen/#)
