Update 37其他相关事项.md, 人身财产安全受到侵害时的应对.md, 入境、过境、出境受阻时的应对.md, 居住证遗失后的应对.md, 意外受伤-生病时的应对.md, 护照遗失后的应对.md, 防诈反诈.md

--- a/居住证遗失后的应对.md
+++ b/居住证遗失后的应对.md
@@ -1,17 +1,27 @@
 ^
-**如果在瑞士境内丢失居住证...**
+
+**如果在瑞士境内丢失居住证**...
+
 1. 首先，立即到当地警察局报警并备案
 2. 立即与当地户籍管理处联系
-* Kreisbüro/Gemeindehaus户籍管理地区地址可在网上查找 (https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma.html)
 
+* Kreisbüro/Gemeindehaus户籍管理地区地址可在网上查找 (<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma.html>)
 
 * 带好证件复印件
+
 ^
-**如果在国外旅游时丢失居住证...**
+
+**如果在国外旅游时丢失居住证**...
+
 1. 首先，立即到当地警察局报警并备案，并保存好报失单
 2. 联系机场海关，进行咨询，并提前准备好：
+
 * 通报或出示警察局报案证明
 * 其它有效证件的原件/复印件
-**备注:** 运气好的话，机场海关不要求出示居住证。但是，不能保证他们不检查
+  **备注**: 运气好的话，机场海关不要求出示居住证。但是，不能保证他们不检查
+
 3. 回到瑞士以后立即向当地户籍管理部门通报
+
 * Kreisbüro/Gemeinde户籍管理地区地址可在网上查找
+
+^
