Update 10申请签证.md, 13赴瑞机票.md, 16 云找房.md, 25住址申报（“户口”）.md, 27保险及豁免.md, 28居留证的办理.md, 30学联服务.md, 34居留证的延期.md, 35“户口”相关.md, UZH相关.md, 入境、过境、出境受阻时的应对.md, 对于Party扰民的应对.md, 意外受伤-生病时的应对.md, 护照/居留证遗失后的应对.md, 报警和法律援助.md, 防诈反诈.md

--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,8 +1,10 @@
 > [warning] 本章节后期考虑简要添加以下内容，部分信息将请新生提供：
-> - 签证更改（如姓名写错，希望更改最早准许入境日期等） 的可能性及对接方
-> - 签证效力知识普及（以短句+外链形式）
-> - 《授权信》相关
-> - 极端情况下直接提请移民局介入的相关跟进
+>
+> * 签证更改（如姓名写错，希望更改最早准许入境日期等） 的可能性及对接方
+> * 签证效力知识普及（以短句+外链形式）
+> * 《授权信》相关
+> * 极端情况下直接提请移民局介入的相关跟进
+
 #### **1. 需要申请签证的人员**
 
 根据瑞士相关法律法规，以下人员赴瑞留学**不需要**办理签证：
@@ -12,7 +14,7 @@
 * 持有任一申根国家签发的有效申根居留或申根D类签证的非[欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)公民
 
 换言之，**大多数赴瑞求学的中国留学生在首次赴瑞留学前需要提前办理申根D类签证，并凭此入境瑞士**。对于少数符合上述“不需要办理签证”条件的留学生，请参考[Immigration to Switzerland - Immigration without a visa](https://ethz.ch/en/studies/international/after-admission/immigration/without-visa.html)的指导。
-此外，**如先前因在瑞士就读中学而持有瑞士居留证，而其在中学毕业后大学开学前到期的，可选择向苏黎世州移民局申请办理“境内迁移”（Kantonswechsel）**，具体流程请根据自身实际情况咨询苏黎世州移民局；亦可在居留证到期前回国按正常流程办理签证后再行赴瑞。**对于诸如此类的“冷门”情况，我们始终建议主动咨询移民局，阐明自身实际情况并根据其建议/要求办理相关手续**。
+此外，**如先前因在瑞士就读中学而持有瑞士居留证，而其在中学毕业后大学开学前到期的，可选择向苏黎世州移民局申请办理“境内迁移”（Kantonswechsel**），具体流程请根据自身实际情况咨询苏黎世州移民局；亦可在居留证到期前回国按正常流程办理签证后再行赴瑞。**对于诸如此类的“冷门”情况，我们始终建议主动咨询移民局，阐明自身实际情况并根据其建议/要求办理相关手续**。
 
 ^
 
@@ -22,8 +24,8 @@
 
 #### **2. 申请签证的时间**
 
-- 对于**本科与硕士**学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
-- 对于博士学生，因需要的签证类型为工作签，必须由学校代为申请（实际操作上一般由组内秘书代为申请）。
+* 对于**本科与硕士**学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
+* 对于博士学生，因需要的签证类型为工作签，必须由学校代为申请（实际操作上一般由组内秘书代为申请）。
 
 ^
 
@@ -74,7 +76,7 @@
 >
 > 详情可见：<https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
 
-* 银行存款（**请存入苏黎世州移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中**，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有存款冻结要求，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
+* 银行存款（**请存入苏黎世州移民局**[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)**中**，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有存款冻结要求，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
 
 ^
 
@@ -122,7 +124,7 @@
 
 #### **6. 递交签证材料的地点和预约方式**
 
-瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)**。
+瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见**[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)。
 
 ^
 
