--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -33,7 +33,7 @@
 此外，如有往返城市不同的（比如北京→苏黎世→上海），可在购票界面选择“多程”/“Multi-City”，但如此购买到的机票价格不一定是最优惠的
 另外，由于复杂的市场原因，经常会出现A→B→C的航班比A→B航班还要便宜的现象，但是由于运输合同、行李直挂等原因，我们并不推荐采取这种“弃乘”的方式来节约成本。（曾有旅客因为采取这样的方式搭乘飞机，被航司告上法庭的。因此为了避免带来不必要的麻烦，还是建议大家按实际需要安排路线行程）
 
-#### **1.6 注意机票类别（多票组合vs联程票）**
+#### **1.6 注意机票类别（多票组合vs联程票**）
 
 为了给旅客提供更优惠的票价，不少OTA平台会提供多票组合选项，即将中转行程的前段和后段分别出票，这样开出的机票基本不能实行行李直挂，必须在中转地提取行李并重新办理值机手续（即使前段和后段航班属于一个航司，地勤也有权拒绝；即使地勤明确表示愿意帮助“捞行李”也有一定风险），经非申根、非免签国家转机还需要额外办理过境签证，因此不推荐选择此类客票，即，**不建议选择非联程票赴瑞**。
 此外，部分航司（如海南航空HU）开出的联程票也不能实现行李直挂，需要特别注意。
