--- a/25住址申报（“户口”）.md
+++ b/25住址申报（“户口”）.md
@@ -12,7 +12,7 @@
 | 苏黎世州                  | Kanton Zürich                                                | Canton of Zurich                                                                   |
 | 苏黎世市 / 苏黎世市区          | Stadt Zürich                                                 | City of Zurich                                                                     |
 | 市县                    | Gemeinde                                                     | Community                                                                          |
-| 居委会 *（2023年6月12日起撤销）* | Kreisbüro                                                    | District office                                                                    |
+| 居委会 （*2023年6月12日起撤销*） | Kreisbüro                                                    | District office                                                                    |
 | 人口登记办公室               | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
 | 住址申报                  | anmelden                                                     | register                                                                           |
 | 住址变更                  | Addresseänderung                                             | Change of residential address                                                      |
@@ -30,16 +30,16 @@
 ^
 
 > [info] **背景介绍**
-> *为确保本文内容与其他较早发布的相关消息来源的衔接，保留该模块。*
+> *为确保本文内容与其他较早发布的相关消息来源的衔接，保留该模块*。
 > 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记办公室（详见：[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
 >
-> - **南城人口登记办公室（Personenmeldeamt Zürich Süd）
->   地址：Stadthausquai 17, 8001 Zürich（市政厅）
->   网站：[Personenmeldeamt Zürich Süd](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb01.html)**
-> - 北城人口登记办公室（Personenmeldeamt Zürich Nord）
+> * **南城人口登记办公室（Personenmeldeamt Zürich Süd**）
+>   **地址：Stadthausquai 17, 8001 Zürich（市政厅**）
+>   **网站**：[Personenmeldeamt Zürich Süd](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb01.html)
+> * 北城人口登记办公室（Personenmeldeamt Zürich Nord）
 >   地址：Hofwiesenstrasse 370, 8050 Zürich（Oerlikon火车站）
 >   网站：[Personenmeldeamt Zürich Nord](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb11.html)
-> - 西城人口登记办公室（Personenmeldeamt Zürich West）
+> * 西城人口登记办公室（Personenmeldeamt Zürich West）
 >   地址：Hohlstrasse 35, 8004 Zürich（Helvetiaplatz）
 >   网站：[Personenmeldeamt Zürich West](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb04.html)
 >
@@ -49,12 +49,14 @@
 ***
 
 **瑞士有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中新迁入的人员必须在抵达后14天内进行申报**。相关法律法规见：[Gesetz über das Meldewesen und die Einwohnerregister (MERG)](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)
-*若预计在14天内没有找到住处，**必须于入境起14天内前往临时住址对应的人口登记办公室**，**向工作人员说明自己的情况**，让工作人员进行临时记录，以免成为“黑户”。*
-^
-**具体如下：**
-**1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类）：**
+*若预计在14天内没有找到住处*，***必须于入境起14天内前往临时住址对应的人口登记办公室***，***向工作人员说明自己的情况***，*让工作人员进行临时记录，以免成为“黑户*”。
 
-* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭[预约](https://www.etermin.net/personenmeldeamtsued)前往南城人口登记办公室**进行住址申报
+^
+
+**具体如下**：
+**1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类**）：
+
+* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记办公室**进行住址申报
   （*必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期。Stadthaus的Information Desk工作人员英语很好，人也友好，找不到路可以请他们帮忙带路*）
 * 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网
 
@@ -66,8 +68,8 @@
 
 如不明确自己所住的地点是属于市区还是郊区的，可
 
-- 直接询问房东或室友，或
-- 通过地址判定：如地址邮编为“Zürich”字样则代表该地址在市区，如为其他字样（如”Kloten“”Winterthur“等）则代表该地址在郊区。
+* 直接询问房东或室友，或
+* 通过地址判定：如地址邮编为“Zürich”字样则代表该地址在市区，如为其他字样（如”Kloten“”Winterthur“等）则代表该地址在郊区。
 
 ^
 
@@ -75,9 +77,9 @@
 
 根据[苏黎世市政府相关要求](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/zuzug.html)，参考[ETH的相关介绍](https://ethz.ch/de/studium/international/nach-ankunft/aufenthaltsbewilligung.html)，从瑞士以外的国家迁入苏黎世州的人员在首次办理住址申报时须准备以下材料：
 
-- 护照原件
-- 租房合同原件（如果你是转租合同，需要把二房东手里的原始合同也一起带过去，且最好二房东陪同前往）
-- 学期注册确认（Erweiterte Immatrikulationsbestätigung / Enrolment confirmation）
+* 护照原件
+* 租房合同原件（如果你是转租合同，需要把二房东手里的原始合同也一起带过去，且最好二房东陪同前往）
+* 学期注册确认（Erweiterte Immatrikulationsbestätigung / Enrolment confirmation）
 
 同时，还需**带足200瑞郎**用于缴费
 
@@ -89,21 +91,22 @@
 
 #### **3**. **预约办理居留证**
 
-新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留证的日期和时间，此项会在人口登记办公室的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留证（见[28 首次办理居留证](<28居留证的办理.md>)）。
-**关于时间选择：** 根据自身情况选择一个大致合适的时间即可，后期即使计划有变，亦可通过预约单上提供的网站更改时间。
+新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留证的日期和时间，此项会在人口登记办公室的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留证（见[28 首次办理居留证](28居留证的办理.md)）。
+**关于时间选择**： 根据自身情况选择一个大致合适的时间即可，后期即使计划有变，亦可通过预约单上提供的网站更改时间。
 
 ^
 
-#### **4. 申报确认函（Meldebestätigung / Confirmation of registration）**
+#### **4. 申报确认函（Meldebestätigung / Confirmation of registration**）
 
 新迁入苏黎世的人员在完成住址申报后会获得一张“申报确认函”（一张含有个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}），其在大多数场合与居留证等效，凭该申报确认函即可办理瑞士本地的银行卡（见[26 瑞士银行卡](26瑞士银行卡.md)）和学生保险（见[27 保险及豁免](27保险及豁免.md)），但办理Postpaid电话卡业务时仍然需要正式的居留证。
 虽然相比于正式的居留证，这张确认函使用频率相对较低，但是也应**妥善保管**备用（即使已获得正式居留证）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张申报确认函上的参考号（具体根据所选报告方式有所不同）。
-> [info]*后期住址有所变更，需要办理住址变更申报的，或是因离开所住市县需要办理注销的，请参考[35 “户口”相关](<35“户口”相关.md>)部分。*
+
+> [info] *后期住址有所变更，需要办理住址变更申报的，或是因离开所住市县需要办理注销的，请参考*[35 “户口”相关](35“户口”相关.md)*部分*。
+
 ^
 
+#### **5. 第三方申报义务（Drittmeldepflicht**）
 
-
-#### **5. 第三方申报义务（Drittmeldepflicht）**
 > [warning] *本章节内容的具体实施可能需要额外核实*
 
 根据苏黎世市法规，出租人（房东/中介/**二房东**）在房屋出租情况有变更时（即：原承租人搬出或有新的承租人搬入时等）需向社区所在的人口登记办公室报告房屋出租变动情况（[可在线完成](https://www.drittmeldung.ch/ui/#/home)）。
