--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -1,3 +1,5 @@
+> [success] 本篇贡献：杨锦涛
+
 以下信息资料主要来自ETH官网相关页面以及Swisscare FAQ页面
 
 > <https://swisscare.com/zh/product/ruishiguojixueshengjiankangbaoxian>
