--- a/30学联服务.md
+++ b/30学联服务.md
@@ -1,11 +1,11 @@
 #### **1. 学联官方渠道**
 
-- 学联官网：<https://www.acssz.org/>
-- 学联论坛：<https://forum.acssz.org/>
-- 学联微信公众号：
-![](.topwrite/assets/image_1682199759896.png =160)
-- 学联小红书：
-![](.topwrite/assets/image_1682199946890.png =159)
+* 学联官网：<https://www.acssz.org/>
+* 学联论坛：<https://forum.acssz.org/>
+* 学联微信公众号：
+  ![](.topwrite/assets/image_1682199759896.png =160)
+* 学联小红书：
+  ![](.topwrite/assets/image_1682199946890.png =159)
 
 ^
 
@@ -15,31 +15,40 @@
 
 ^
 
-#### **3. 学联《苏黎世留学指南》（本文）**&#x20;
+#### **3. 学联《苏黎世留学指南》（本文**）&#x20;
 
 <https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>
 
 ^
+
 #### **4. 学联专属SIM卡折扣：Sunrise LEBARA**
+
 ![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 ![](.topwrite/assets/image_1682192038118.png =245)
-**业务介绍：**<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
+**业务介绍**：<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
 
 ^
+
 #### **5. 学联专属保险折扣：Swisscare**
+
 ![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
-**业务介绍：**<https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
+**业务介绍**：<https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
 **学联专属办理链接**：<https://forms.swisscare.com/#/spss?group=3018>
+
 ^
 
 #### **6. 学联租房合作伙伴：Intermezzo**
+
 ![](.topwrite/assets/image_1682200100537.png =258)
-**业务介绍：**<https://forum.acssz.org/d/386>
+**业务介绍**：<https://forum.acssz.org/d/386>
+
 ^
 
 #### **7. 电子学联卡**
+
 微信搜索小程序”ACSSZ“，上传相关材料即可办理。
 材料审核通过后在学联合作商家处凭该卡消费可享9折优惠。
+
 ^
 
-#### ***AND - MANY MORE TO BE DISCOVERED!***
+#### ***AND - MANY MORE TO BE DISCOVERED***!
