--- a/35“户口”相关.md
+++ b/35“户口”相关.md
@@ -1,15 +1,14 @@
 > [warning] *本章节的名称有待商榷*
-> 
-> 
+
 #### **1. 住址变更申报**
 
-当住址发生变更时，同样需要进行申报。目前，苏黎世市区已经引入了[E-Umzug平台](<https://www.eumzug.swiss/eumzugngx/global>)供居民在线申报地址变更。但对于部分尚未接入[E-Umzug平台](<https://www.eumzug.swiss/eumzugngx/global>)的苏黎世郊区区县，仍需申报人**亲自前往**对应的人口登记办公室线下办理申报。
+当住址发生变更时，同样需要进行申报。目前，苏黎世市区已经引入了[E-Umzug平台](https://www.eumzug.swiss/eumzugngx/global)供居民在线申报地址变更。但对于部分尚未接入[E-Umzug平台](https://www.eumzug.swiss/eumzugngx/global)的苏黎世郊区区县，仍需申报人**亲自前往**对应的人口登记办公室线下办理申报。
 在任何情况下，申报人都可以选择前往对应的人口登记办公室线下办理申报。线下办理申报应携带：护照、居留证（如有）、原有的申报确认函、新的租房合同以及足量资金等。
 
 ^
 
 **情况一：苏黎世市区→苏黎世市区**
-参考：[Umzug in der Stadt](<https://www.eumzug.swiss/eumzugngx/global>)
+参考：[Umzug in der Stadt](https://www.eumzug.swiss/eumzugngx/global)
 须在搬迁完成前14天至搬迁完成后14天期间
 
 * 前往市区任一人口登记办公室（该项业务为**全市通办**）
@@ -23,7 +22,7 @@
 须在搬迁完成后14天内
 
 * 前往居住地所在区县的人口登记办公室
-* 或在线通过[E-Umzug平台](<https://www.eumzug.swiss/eumzugngx/global>)，如适用
+* 或在线通过[E-Umzug平台](https://www.eumzug.swiss/eumzugngx/global)，如适用
 
 办理地址变更申报。
 
@@ -31,23 +30,24 @@
 
 **情况三：苏黎世郊区→苏黎世市区**
 须在离开原居住地后14天内前往原居住地所在市县的人口登记办公室办理注销，再在新居住地的人口登记办公室申报新的住址。
-如原居住地所在市县支持[E-Umzug](<https://www.eumzug.swiss/eumzugngx/global>)的，也可在线办理。在线办理完成的，无须再前往市区的人口登记办公室线下办理申报。
+如原居住地所在市县支持[E-Umzug](https://www.eumzug.swiss/eumzugngx/global)的，也可在线办理。在线办理完成的，无须再前往市区的人口登记办公室线下办理申报。
 
 ^
 
 **情况四：苏黎世市区→苏黎世郊区**
 须在离开苏黎世市后14天内前往市区任一人口登记办公室办理注销（无须预约），再在新居住地的人口登记办公室申报新的住址。
-如新居住地所在市县支持[E-Umzug](<https://www.eumzug.swiss/eumzugngx/global>)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记办公室办理申报。
+如新居住地所在市县支持[E-Umzug](https://www.eumzug.swiss/eumzugngx/global)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记办公室办理申报。
 
 ^
 
 **情况五：苏黎世郊区→苏黎世郊区（不同区县**）
 须在离开原居住地后14天内前往原居住地所在市县的人口登记办公室办理注销，再在新居住地的人口登记办公室申报新的住址。
-如原居住地和新居住地所在市县均支持[E-Umzug](<https://www.eumzug.swiss/eumzugngx/global>)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记办公室办理申报。
+如原居住地和新居住地所在市县均支持[E-Umzug](https://www.eumzug.swiss/eumzugngx/global)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记办公室办理申报。
 
 ^
 
-#### **2. 第三方申报义务（Drittmeldepflicht）**
+#### **2. 第三方申报义务（Drittmeldepflicht**）
+
 > [warning] *本章节内容的具体实施可能需要额外核实*
 
 根据苏黎世市法规，出租人（房东/中介/**二房东**）在房屋出租情况有变更时（即：原承租人搬出或有新的承租人搬入时等）需向社区所在的人口登记办公室报告房屋出租变动情况（[可在线完成](https://www.drittmeldung.ch/ui/#/home)）。
@@ -57,13 +57,14 @@
 > 苏黎世市的有关政策可参见：[Stadt Zürich Drittmeldepflicht](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)
 
 ^
+
 #### **3. 住址注销**
 
 根据瑞士相关法律法规，居民离开现居住市县（前往其他市县居住）的，或居民不再居住在瑞士的（如完成学业归国），均须办理住址注销。
 
-* **对于前者（离开现居住市县，前往其他市县居住的）：**
-  须在离开现居住市县后14天内前往现居住地对应的人口登记办公室，凭护照、居留证、原有的申报确认函办理注销。如现居住地所在市县和新居住地所在市县均支持[E-Umzug](<https://www.eumzug.swiss/eumzugngx/global>)的，也可在线办理。
-* **对于后者（离开瑞士的）：**
+* **对于前者（离开现居住市县，前往其他市县居住的**）：
+  须在离开现居住市县后14天内前往现居住地对应的人口登记办公室，凭护照、居留证、原有的申报确认函办理注销。如现居住地所在市县和新居住地所在市县均支持[E-Umzug](https://www.eumzug.swiss/eumzugngx/global)的，也可在线办理。
+* **对于后者（离开瑞士的**）：
   （有待核实：该项业务在市区是否通办）
   须在离开瑞士前30天内前往现居住地对应的人口登记办公室，凭护照、居留证、原有的申报确认函办理注销，同时还需要缴纳20瑞郎的注销费用。
 
