--- a/护照/居留证遗失后的应对.md
+++ b/护照/居留证遗失后的应对.md
@@ -1,28 +1,41 @@
-> [info] ***【学联提醒】***
-> - ***原则上，对于中国公民，进出瑞士国境（尤其是通过航空或公路口岸出入境的）必须同时持有瑞士居留证（或有效瑞士签证）和中国护照才能证明身份。即使瑞士边检有时并不对此进行查验，我们亦不建议抱有任何侥幸心理。***
-> - ***除必须情况外，出行前应准备好护照复印件和居留证复印件并随身携带。***
-> - ***提前将护照资料页，居留证/身份证，机票行程单，宾馆订单等旅行文件的电子版/扫描版备份在自己的电子邮箱中，即使遇到原件及打印件丢失情况亦可证明身份及行程。*** 
+> [info] 【***学联提醒***】
+>
+> * ***原则上，对于中国公民，进出瑞士国境（尤其是通过航空或公路口岸出入境的）必须同时持有瑞士居留证（或有效瑞士签证）和中国护照才能证明身份。即使瑞士边检有时并不对此进行查验，我们亦不建议抱有任何侥幸心理***。
+> * ***除必须情况外，出行前应准备好护照复印件和居留证复印件并随身携带***。
+> * ***提前将护照资料页，居留证/身份证，机票行程单，宾馆订单等旅行文件的电子版/扫描版备份在自己的电子邮箱中，即使遇到原件及打印件丢失情况亦可证明身份及行程***。
 
 #### **1. 护照遗失处理流程**
+
 > [warning] 本章节内容根据总领馆通知有所修改（主要为”补办护照是否需要警局开具的报失单“一项），为确保内容准确无误将请总领馆阅读检查。
 
 【第一步】立即到当地警察局**报警备案**，并保存好报失单。报失单上至少应列明报失人姓名和遗失物品名称。
-【第二步】立即向中国驻当地使领馆申请补办护照/旅行证（后者限需要紧急回国人员，回国后应立即前往当地公安部门补办护照）。驻苏黎世总领馆公布的流程可参考[《“中国领事”APP办理护照/旅行证须知》](<http://zurich.china-consulate.gov.cn/lsfw/hzlxz/202108/t20210803_9011969.htm>)和[《“中国领事”APP使用说明及常见问题解答》](<http://zurich.china-consulate.gov.cn/lsfw/hzlxz/202109/t20210903_9011972.htm>)；如需要向其他使领馆申请的，请以该馆公告为准。
+【第二步】立即向中国驻当地使领馆申请补办护照/旅行证（后者限需要紧急回国人员，回国后应立即前往当地公安部门补办护照）。驻苏黎世总领馆公布的流程可参考[《“中国领事”APP办理护照/旅行证须知》](http://zurich.china-consulate.gov.cn/lsfw/hzlxz/202108/t20210803_9011969.htm)和[《“中国领事”APP使用说明及常见问题解答》](http://zurich.china-consulate.gov.cn/lsfw/hzlxz/202109/t20210903_9011972.htm)；如需要向其他使领馆申请的，请以该馆公告为准。
 补办护照一般需等待15个工作日。补证申请一旦提交不能撤回，丢失的护照即使找回也已经作废，其上所有签证也一并失效，不得继续使用。
+
 ^
+
 #### **2. 居留证遗失处理**
+
 1. 首先，立即到当地警察局报警并备案
 2. 立即与当地户籍管理处联系
-* Kreisbüro/Gemeindehaus户籍管理地区地址可在网上查找 (https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma.html)
 
+* Kreisbüro/Gemeindehaus户籍管理地区地址可在网上查找 (<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma.html>)
 
 * 带好证件复印件
+
 ^
-**如果在国外旅游时丢失居住证...**
+
+**如果在国外旅游时丢失居住证**...
+
 1. 首先，立即到当地警察局报警并备案，并保存好报失单
 2. 联系机场海关，进行咨询，并提前准备好：
+
 * 通报或出示警察局报案证明
 * 其它有效证件的原件/复印件
-**备注:** 运气好的话，机场海关不要求出示居住证。但是，不能保证他们不检查
+  **备注**: 运气好的话，机场海关不要求出示居住证。但是，不能保证他们不检查
+
 3. 回到瑞士以后立即向当地户籍管理部门通报
+
 * Kreisbüro/Gemeinde户籍管理地区地址可在网上查找
+
+^
