--- a/报警和法律援助.md
+++ b/报警和法律援助.md
@@ -1,11 +1,13 @@
 > [success] 本章作者：赵逸飞
 
-> [danger] ***【学联提醒】如遇到突发事件，在保证自身安全的前提下，请尽量第一时间报警（而非事后再向警方报案）！***
+> [danger] 【***学联提醒】如遇到突发事件，在保证自身安全的前提下，请尽量第一时间报警（而非事后再向警方报案***）！
 
->  [warning] *本章编写尚未完成*
+> [warning] *本章编写尚未完成*
 
-> [warning] *本章节关于SBB铁路警察的管辖范围需要额外核实。*
+> [warning] *本章节关于SBB铁路警察的管辖范围需要额外核实*。
+
 #### **1. 报案注意事项**
+
 关于在瑞报警相关事项，如
 
 * 防空警报相关事项
@@ -13,9 +15,10 @@
 * 交通事故相关事项
 
 可参考[ch.ch - Emergencies and danger in Switzerland](https://www.ch.ch/en/safety-and-justice/emergencies-and-danger#emergency-numbers-in-switzerland)。
-^
-#### **2. 瑞士紧急电话列表**
 
+^
+
+#### **2. 瑞士紧急电话列表**
 
 | 事项                                           | 电话                              | 备注          |
 | -------------------------------------------- | ------------------------------- | ----------- |
