--- a/报警和法律援助.md
+++ b/报警和法律援助.md
@@ -1,4 +1,6 @@
-> [success] 本章作者：赵逸飞
+> [success] 本章作者：赵逸飞、李敬淇
+
+> [success] 特别鸣谢：李敬淇
 
 > [danger] 【***学联提醒】如遇到突发事件，在保证自身安全的前提下，请尽量第一时间报警（而非事后再向警方报案***）！
 
@@ -34,3 +36,7 @@
 | 驻苏黎世总领馆领事保护应急热线                              | +41 44 2091503                  |             |
 
 ^
+
+案件发生之后，去嫌疑人可能所在的州辖区警察局，如果在苏黎世内可以去市警察局（Stadtpolizei）， 如果嫌疑人可能已经离开苏黎世市区去往其他的城市，可以去州警察局（Kantonspolizei）报警。去报案前需要携带个人身份证件。到警察局之后直接说需要报案就可以，之后按警察要求回答问题和登记个人信息，有些情况下警察可能给你一个表格，需要详细描述案件的所有细节。在盗窃案件中如果能通过定位器（比如Airtag）定位到被盗物品的位置，可以要求警察陪同去往定位器显示的地点。如果找到了被盗物品但是不能确定嫌疑人，请不要第一时间用手触碰被盗物品，警察一般会采集物品上的指纹并与你的生物信息做比对。如果在报案之后无法采取进一步行动，警察一般会给你一张名片和报案回执，如果有进一步的线索可以通过邮件或电话保持联系。在盗窃案件中，需要向警察证明丢失物品的所有权，才可取回物品。一般警察无法向嫌疑人索要赔偿，如果需要赔偿的话需要另去法院起诉。
+
+在结案之后警察局会发给你一封纸质信，信里说明找到了嫌疑人并采取了什么样的措施，如果未在信中明确说明就不用做任何事情了。
